--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,35 @@
 # Environment variables
 .env
+.env.local
 
 # Python
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.venv
 
 # Database
 *.db
 *.sqlite
 *.sqlite3
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
